out/production/TPECompiladores/AnalizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : encabezado_prog bloque_sentencias

   2  encabezado_prog : id

   3  bloque_sentencias : bloque_sentencias '{' sentencia '}'
   4                    | '{' sentencia '}'
   5                    | '{' sentencia
   6                    | sentencia '}'

   7  declaracion_const : Const lista_de_asignacion_const ';'
   8                    | Const lista_de_asignacion_const error
   9                    | Const ';' error

  10  lista_de_asignacion_const : decl_const
  11                            | lista_de_asignacion_const ',' decl_const

  12  decl_const : id op_asignacion cte
  13             | id op_asignacion error
  14             | id cte error
  15             | id error

  16  bloq_sentencias_For : sentencias_For
  17                      | bloq_sentencias_For sentencias_For

  18  sentencia : declarativas
  19            | ejecutables
  20            | sentencia declarativas
  21            | sentencia ejecutables

  22  declarativas : tipo lista_de_variables ';'
  23               | lista_de_variables ';' error
  24               | declaracion_func
  25               | declaracion_const
  26               | sentencia_when

  27  bloque_ejecutables : bloque_ejecutables ejecutables
  28                     | ejecutables

  29  ejecutables : asignacion
  30              | salida
  31              | sentencia_If
  32              | expresion_For
  33              | invocacion_funcion
  34              | sentencia_BREAK error
  35              | sentencia_CONTINUE error

  36  lista_de_variables : id lista_de_variables
  37                     | id ',' lista_de_variables
  38                     | id

  39  parametro : tipo id
  40            | id error

  41  asig_fun : ':' tipo
  42           |

  43  cola_func : '{' cuerpo_fun '}'

  44  lista_parametros :
  45                   | parametro
  46                   | parametro ',' parametro
  47                   | error

  48  encab_fun : fun id '(' lista_parametros ')' asig_fun
  49            | fun '(' lista_parametros ')' asig_fun error

  50  declaracion_func : encab_fun cola_func

  51  ret_fun : Return '(' expresion ')' ';'
  52          | Return expresion ')' ';' error
  53          | Return '(' expresion ';' error
  54          | Return expresion ';' error
  55          | Return '(' expresion ')' error

  56  cuerpo_fun : bloque_sentencias_funcion

  57  ejecutables_funcion : asignacion
  58                      | sentencia_if_funcion
  59                      | salida
  60                      | invocacion_funcion
  61                      | sentencia_for_funcion
  62                      | ret_fun
  63                      | sentencia_BREAK error
  64                      | sentencia_CONTINUE error

  65  bloq_ejecutables_fun : bloq_ejecutables_fun ejecutables_funcion
  66                       | ejecutables_funcion

  67  bloque_sentencias_funcion : bloque_sentencias_funcion ejecutables_funcion
  68                            | bloque_sentencias_funcion declarativas
  69                            | ejecutables_funcion
  70                            | declarativas

  71  op_asignacion : opasignacion
  72                | ':' '='
  73                | '='

  74  asignacion : id op_asignacion expresion ';'
  75             | id op_asignacion expresion error
  76             | id op_asignacion for_else_cte ';'

  77  for_else_cte : expresion_For Else cte
  78               | expresion_For error

  79  salida : out '(' cadena ')' ';'
  80         | out '(' cadena ')' error
  81         | out '(' cadena error ';'
  82         | out cadena error ';'
  83         | '(' cadena error
  84         | out '(' ')' error ';'

  85  sentencia_If : If condicion_if cuerpo_If PR_end_if ';'
  86               | If condicion_if then cuerpo_If PR_end_if error
  87               | If condicion_if then cuerpo_If error

  88  condicion_if : '(' expresion_relacional ')'
  89               | expresion_relacional ')'
  90               | '(' expresion_relacional
  91               | expresion_relacional

  92  cuerpo_If : cuerpo_Then cuerpo_Else
  93            | cuerpo_Then
  94            | cuerpo_Else

  95  cuerpo_Then : PR_then '{' bloque_ejecutables '}'
  96              | PR_then ejecutables

  97  cuerpo_Else : PR_else '{' bloque_ejecutables '}'
  98              | PR_else ejecutables

  99  sentencia_if_for : If condicion_if cuerpo_If_for PR_end_if ';'
 100                   | If condicion_if cuerpo_If_for PR_end_if error
 101                   | If condicion_if cuerpo_If_for error

 102  cuerpo_If_for : cuerpo_then_for cuerpo_Else_for
 103                | cuerpo_then_for
 104                | cuerpo_Else_for error

 105  cuerpo_then_for : PR_then '{' bloq_sentencias_For '}'
 106                  | PR_then sentencias_For

 107  cuerpo_Else_for : PR_else '{' bloq_sentencias_For '}'
 108                  | PR_else sentencias_For

 109  sentencia_if_funcion : If condicion_if cuerpo_If_funcion PR_end_if ';'
 110                       | If condicion_if cuerpo_If_funcion PR_end_if error
 111                       | If condicion_if cuerpo_If_funcion error

 112  cuerpo_If_funcion : cuerpo_then_funcion cuerpo_Else_funcion
 113                    | cuerpo_then_funcion
 114                    | cuerpo_Else_funcion error

 115  cuerpo_then_funcion : PR_then '{' bloq_ejecutables_fun '}'
 116                      | PR_then ejecutables_funcion

 117  cuerpo_Else_funcion : PR_else '{' bloq_ejecutables_fun '}'
 118                      | PR_else ejecutables_funcion

 119  sentencia_if_for_fun : If condicion_if cuerpo_If_for_fun PR_end_if ';'
 120                       | If condicion_if cuerpo_If_for_fun PR_end_if error
 121                       | If condicion_if cuerpo_If_for_fun error

 122  cuerpo_If_for_fun : then_if_for_fun else_if_for_fun
 123                    | then_if_for_fun
 124                    | else_if_for_fun error

 125  then_if_for_fun : PR_then '{' bloq_for_funcion '}'
 126                  | PR_then sentencias_For_funcion

 127  else_if_for_fun : PR_else '{' bloq_for_funcion '}'
 128                  | PR_else sentencias_For_funcion

 129  PR_then : then

 130  PR_else : Else

 131  PR_end_if : end_if

 132  sentencia_when : when '(' condicion_when ')' cuerpo_when ';'
 133                 | when condicion_when ')' cuerpo_when ';' error
 134                 | when '(' condicion_when cuerpo_when ';' error

 135  condicion_when : expresion_relacional

 136  cuerpo_when : then '{' sentencia '}'
 137              | then '{' sentencia error
 138              | then sentencia '}' error

 139  encabezado_For : For '(' detalles_for ')' cola_For
 140                 | For id op_asignacion cte ';' condicion_for ';' signo id ')' cola_For error
 141                 | For id op_asignacion cte ';' condicion_for ';' signo id cola_For error
 142                 | For '(' id op_asignacion cte ':' condicion_for ':' signo id ')' cola_For error
 143                 | id ':' For '(' detalles_for ')' cola_For

 144  detalles_for : asignacion_for ';' cond_op_for

 145  cond_op_for : condicion_for ';' operacion_for

 146  condicion_for : id comparador cte

 147  cola_For : '{' bloq_sentencias_For '}' ';'
 148           | sentencias_For
 149           | '{' '}'

 150  signo : '+'
 151        | '-'

 152  sentencias_For : asignacion
 153                 | salida
 154                 | expresion_For
 155                 | sentencia_if_for
 156                 | invocacion_funcion
 157                 | sentencia_BREAK
 158                 | sentencia_CONTINUE
 159                 | declarativas error
 160                 | ret_fun error

 161  expresion_For : encabezado_For

 162  cola_For_funcion : '{' bloq_for_funcion '}' ';'
 163                   | sentencias_For_funcion

 164  sentencia_for_funcion : For '(' detalles_for ')' cola_For_funcion
 165                        | For id op_asignacion cte ';' condicion_for ';' signo id ')' cola_For_funcion error
 166                        | For id op_asignacion cte ';' condicion_for ';' signo id cola_For_funcion error
 167                        | For '(' id op_asignacion cte ':' condicion_for ':' signo id ')' cola_For_funcion error
 168                        | id ':' For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' cola_For_funcion

 169  asignacion_for : id op_asignacion cte

 170  operacion_for : signo id

 171  sentencias_For_funcion : asignacion
 172                         | salida
 173                         | sentencia_for_funcion
 174                         | ret_fun
 175                         | invocacion_funcion
 176                         | sentencia_BREAK
 177                         | sentencia_CONTINUE
 178                         | sentencia_if_for_fun
 179                         | declarativas error

 180  bloq_for_funcion : sentencias_For_funcion
 181                   | bloq_for_funcion sentencias_For_funcion

 182  sentencia_BREAK : BREAK ';'
 183                  | BREAK cte ';'
 184                  | BREAK error

 185  sentencia_CONTINUE : CONTINUE ';'
 186                     | CONTINUE ':' id ';'
 187                     | CONTINUE id ';' error
 188                     | CONTINUE error

 189  invocacion_funcion : id '(' list_parametros_Inv ')' ';'
 190                     | id '(' ')' ';'

 191  list_parametros_Inv : factor ',' factor
 192                      | factor

 193  expresion_relacional : expresion comparador expresion

 194  expresion : expresion signo termino
 195            | termino

 196  termino : termino '*' factor
 197          | termino '/' factor
 198          | factor

 199  factor : id
 200         | cte
 201         | '-' cte

 202  comparador : '<'
 203             | '>'
 204             | menorigual
 205             | mayorigual
 206             | '='
 207             | distinto

 208  tipo : i32
 209       | f32

state 0
	$accept : . programa $end  (0)

	id  shift 1
	.  error

	programa  goto 2
	encabezado_prog  goto 3


state 1
	encabezado_prog : id .  (2)

	.  reduce 2


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : encabezado_prog . bloque_sentencias  (1)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 8
	i32  shift 9
	when  shift 10
	For  shift 11
	CONTINUE  shift 12
	f32  shift 13
	Const  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	bloque_sentencias  goto 17
	sentencia  goto 18
	declaracion_const  goto 19
	declarativas  goto 20
	ejecutables  goto 21
	tipo  goto 22
	lista_de_variables  goto 23
	declaracion_func  goto 24
	sentencia_when  goto 25
	asignacion  goto 26
	salida  goto 27
	sentencia_If  goto 28
	expresion_For  goto 29
	invocacion_funcion  goto 30
	sentencia_BREAK  goto 31
	sentencia_CONTINUE  goto 32
	encab_fun  goto 33
	encabezado_For  goto 34


state 4
	lista_de_variables : id . lista_de_variables  (36)
	lista_de_variables : id . ',' lista_de_variables  (37)
	lista_de_variables : id .  (38)
	asignacion : id . op_asignacion expresion ';'  (74)
	asignacion : id . op_asignacion expresion error  (75)
	asignacion : id . op_asignacion for_else_cte ';'  (76)
	encabezado_For : id . ':' For '(' detalles_for ')' cola_For  (143)
	invocacion_funcion : id . '(' list_parametros_Inv ')' ';'  (189)
	invocacion_funcion : id . '(' ')' ';'  (190)

	id  shift 35
	opasignacion  shift 36
	','  shift 37
	':'  shift 38
	'('  shift 39
	'='  shift 40
	';'  reduce 38

	op_asignacion  goto 41
	lista_de_variables  goto 42


state 5
	sentencia_If : If . condicion_if cuerpo_If PR_end_if ';'  (85)
	sentencia_If : If . condicion_if then cuerpo_If PR_end_if error  (86)
	sentencia_If : If . condicion_if then cuerpo_If error  (87)

	id  shift 43
	cte  shift 44
	'('  shift 45
	'-'  shift 46
	.  error

	expresion  goto 47
	condicion_if  goto 48
	expresion_relacional  goto 49
	factor  goto 50
	termino  goto 51


state 6
	salida : out . '(' cadena ')' ';'  (79)
	salida : out . '(' cadena ')' error  (80)
	salida : out . '(' cadena error ';'  (81)
	salida : out . cadena error ';'  (82)
	salida : out . '(' ')' error ';'  (84)

	cadena  shift 52
	'('  shift 53
	.  error


state 7
	encab_fun : fun . id '(' lista_parametros ')' asig_fun  (48)
	encab_fun : fun . '(' lista_parametros ')' asig_fun error  (49)

	id  shift 54
	'('  shift 55
	.  error


state 8
	sentencia_BREAK : BREAK . ';'  (182)
	sentencia_BREAK : BREAK . cte ';'  (183)
	sentencia_BREAK : BREAK . error  (184)

	error  shift 56
	cte  shift 57
	';'  shift 58
	.  error


state 9
	tipo : i32 .  (208)

	.  reduce 208


state 10
	sentencia_when : when . '(' condicion_when ')' cuerpo_when ';'  (132)
	sentencia_when : when . condicion_when ')' cuerpo_when ';' error  (133)
	sentencia_when : when . '(' condicion_when cuerpo_when ';' error  (134)

	id  shift 43
	cte  shift 44
	'('  shift 59
	'-'  shift 46
	.  error

	expresion  goto 47
	expresion_relacional  goto 60
	condicion_when  goto 61
	factor  goto 50
	termino  goto 51


state 11
	encabezado_For : For . '(' detalles_for ')' cola_For  (139)
	encabezado_For : For . id op_asignacion cte ';' condicion_for ';' signo id ')' cola_For error  (140)
	encabezado_For : For . id op_asignacion cte ';' condicion_for ';' signo id cola_For error  (141)
	encabezado_For : For . '(' id op_asignacion cte ':' condicion_for ':' signo id ')' cola_For error  (142)

	id  shift 62
	'('  shift 63
	.  error


state 12
	sentencia_CONTINUE : CONTINUE . ';'  (185)
	sentencia_CONTINUE : CONTINUE . ':' id ';'  (186)
	sentencia_CONTINUE : CONTINUE . id ';' error  (187)
	sentencia_CONTINUE : CONTINUE . error  (188)

	error  shift 64
	id  shift 65
	';'  shift 66
	':'  shift 67
	.  error


state 13
	tipo : f32 .  (209)

	.  reduce 209


state 14
	declaracion_const : Const . lista_de_asignacion_const ';'  (7)
	declaracion_const : Const . lista_de_asignacion_const error  (8)
	declaracion_const : Const . ';' error  (9)

	id  shift 68
	';'  shift 69
	.  error

	lista_de_asignacion_const  goto 70
	decl_const  goto 71


state 15
	bloque_sentencias : '{' . sentencia '}'  (4)
	bloque_sentencias : '{' . sentencia  (5)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 8
	i32  shift 9
	when  shift 10
	For  shift 11
	CONTINUE  shift 12
	f32  shift 13
	Const  shift 14
	'('  shift 16
	.  error

	sentencia  goto 72
	declaracion_const  goto 19
	declarativas  goto 20
	ejecutables  goto 21
	tipo  goto 22
	lista_de_variables  goto 23
	declaracion_func  goto 24
	sentencia_when  goto 25
	asignacion  goto 26
	salida  goto 27
	sentencia_If  goto 28
	expresion_For  goto 29
	invocacion_funcion  goto 30
	sentencia_BREAK  goto 31
	sentencia_CONTINUE  goto 32
	encab_fun  goto 33
	encabezado_For  goto 34


state 16
	salida : '(' . cadena error  (83)

	cadena  shift 73
	.  error


state 17
	programa : encabezado_prog bloque_sentencias .  (1)
	bloque_sentencias : bloque_sentencias . '{' sentencia '}'  (3)

	'{'  shift 74
	$end  reduce 1


state 18
	bloque_sentencias : sentencia . '}'  (6)
	sentencia : sentencia . declarativas  (20)
	sentencia : sentencia . ejecutables  (21)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 8
	i32  shift 9
	when  shift 10
	For  shift 11
	CONTINUE  shift 12
	f32  shift 13
	Const  shift 14
	'}'  shift 75
	'('  shift 16
	.  error

	declaracion_const  goto 19
	declarativas  goto 76
	ejecutables  goto 77
	tipo  goto 22
	lista_de_variables  goto 23
	declaracion_func  goto 24
	sentencia_when  goto 25
	asignacion  goto 26
	salida  goto 27
	sentencia_If  goto 28
	expresion_For  goto 29
	invocacion_funcion  goto 30
	sentencia_BREAK  goto 31
	sentencia_CONTINUE  goto 32
	encab_fun  goto 33
	encabezado_For  goto 34


state 19
	declarativas : declaracion_const .  (25)

	.  reduce 25


state 20
	sentencia : declarativas .  (18)

	.  reduce 18


state 21
	sentencia : ejecutables .  (19)

	.  reduce 19


state 22
	declarativas : tipo . lista_de_variables ';'  (22)

	id  shift 35
	.  error

	lista_de_variables  goto 78


state 23
	declarativas : lista_de_variables . ';' error  (23)

	';'  shift 79
	.  error


state 24
	declarativas : declaracion_func .  (24)

	.  reduce 24


state 25
	declarativas : sentencia_when .  (26)

	.  reduce 26


state 26
	ejecutables : asignacion .  (29)

	.  reduce 29


state 27
	ejecutables : salida .  (30)

	.  reduce 30


state 28
	ejecutables : sentencia_If .  (31)

	.  reduce 31


state 29
	ejecutables : expresion_For .  (32)

	.  reduce 32


state 30
	ejecutables : invocacion_funcion .  (33)

	.  reduce 33


state 31
	ejecutables : sentencia_BREAK . error  (34)

	error  shift 80
	.  error


state 32
	ejecutables : sentencia_CONTINUE . error  (35)

	error  shift 81
	.  error


state 33
	declaracion_func : encab_fun . cola_func  (50)

	'{'  shift 82
	.  error

	cola_func  goto 83


state 34
	expresion_For : encabezado_For .  (161)

	.  reduce 161


state 35
	lista_de_variables : id . lista_de_variables  (36)
	lista_de_variables : id . ',' lista_de_variables  (37)
	lista_de_variables : id .  (38)

	id  shift 35
	','  shift 37
	';'  reduce 38

	lista_de_variables  goto 42


state 36
	op_asignacion : opasignacion .  (71)

	.  reduce 71


state 37
	lista_de_variables : id ',' . lista_de_variables  (37)

	id  shift 35
	.  error

	lista_de_variables  goto 84


state 38
	op_asignacion : ':' . '='  (72)
	encabezado_For : id ':' . For '(' detalles_for ')' cola_For  (143)

	For  shift 85
	'='  shift 86
	.  error


state 39
	invocacion_funcion : id '(' . list_parametros_Inv ')' ';'  (189)
	invocacion_funcion : id '(' . ')' ';'  (190)

	id  shift 43
	cte  shift 44
	')'  shift 87
	'-'  shift 46
	.  error

	list_parametros_Inv  goto 88
	factor  goto 89


state 40
	op_asignacion : '=' .  (73)

	.  reduce 73


state 41
	asignacion : id op_asignacion . expresion ';'  (74)
	asignacion : id op_asignacion . expresion error  (75)
	asignacion : id op_asignacion . for_else_cte ';'  (76)

	id  shift 90
	cte  shift 44
	For  shift 11
	'-'  shift 46
	.  error

	expresion_For  goto 91
	expresion  goto 92
	for_else_cte  goto 93
	encabezado_For  goto 34
	factor  goto 50
	termino  goto 51


state 42
	lista_de_variables : id lista_de_variables .  (36)

	.  reduce 36


state 43
	factor : id .  (199)

	.  reduce 199


state 44
	factor : cte .  (200)

	.  reduce 200


state 45
	condicion_if : '(' . expresion_relacional ')'  (88)
	condicion_if : '(' . expresion_relacional  (90)

	id  shift 43
	cte  shift 44
	'-'  shift 46
	.  error

	expresion  goto 47
	expresion_relacional  goto 94
	factor  goto 50
	termino  goto 51


state 46
	factor : '-' . cte  (201)

	cte  shift 95
	.  error


state 47
	expresion_relacional : expresion . comparador expresion  (193)
	expresion : expresion . signo termino  (194)

	menorigual  shift 96
	mayorigual  shift 97
	distinto  shift 98
	'='  shift 99
	'+'  shift 100
	'-'  shift 101
	'<'  shift 102
	'>'  shift 103
	.  error

	signo  goto 104
	comparador  goto 105


state 48
	sentencia_If : If condicion_if . cuerpo_If PR_end_if ';'  (85)
	sentencia_If : If condicion_if . then cuerpo_If PR_end_if error  (86)
	sentencia_If : If condicion_if . then cuerpo_If error  (87)

	then  shift 106
	Else  shift 107
	.  error

	cuerpo_If  goto 108
	cuerpo_Then  goto 109
	cuerpo_Else  goto 110
	PR_then  goto 111
	PR_else  goto 112


state 49
	condicion_if : expresion_relacional . ')'  (89)
	condicion_if : expresion_relacional .  (91)

	')'  shift 113
	then  reduce 91
	Else  reduce 91


state 50
	termino : factor .  (198)

	.  reduce 198


state 51
	expresion : termino .  (195)
	termino : termino . '*' factor  (196)
	termino : termino . '/' factor  (197)

	'*'  shift 114
	'/'  shift 115
	error  reduce 195
	then  reduce 195
	Else  reduce 195
	menorigual  reduce 195
	mayorigual  reduce 195
	distinto  reduce 195
	';'  reduce 195
	')'  reduce 195
	'='  reduce 195
	'+'  reduce 195
	'-'  reduce 195
	'<'  reduce 195
	'>'  reduce 195


state 52
	salida : out cadena . error ';'  (82)

	error  shift 116
	.  error


state 53
	salida : out '(' . cadena ')' ';'  (79)
	salida : out '(' . cadena ')' error  (80)
	salida : out '(' . cadena error ';'  (81)
	salida : out '(' . ')' error ';'  (84)

	cadena  shift 117
	')'  shift 118
	.  error


state 54
	encab_fun : fun id . '(' lista_parametros ')' asig_fun  (48)

	'('  shift 119
	.  error


state 55
	encab_fun : fun '(' . lista_parametros ')' asig_fun error  (49)
	lista_parametros : .  (44)

	error  shift 120
	id  shift 121
	i32  shift 9
	f32  shift 13
	')'  reduce 44

	tipo  goto 122
	parametro  goto 123
	lista_parametros  goto 124


state 56
	sentencia_BREAK : BREAK error .  (184)

	.  reduce 184


state 57
	sentencia_BREAK : BREAK cte . ';'  (183)

	';'  shift 125
	.  error


state 58
	sentencia_BREAK : BREAK ';' .  (182)

	.  reduce 182


state 59
	sentencia_when : when '(' . condicion_when ')' cuerpo_when ';'  (132)
	sentencia_when : when '(' . condicion_when cuerpo_when ';' error  (134)

	id  shift 43
	cte  shift 44
	'-'  shift 46
	.  error

	expresion  goto 47
	expresion_relacional  goto 60
	condicion_when  goto 126
	factor  goto 50
	termino  goto 51


state 60
	condicion_when : expresion_relacional .  (135)

	.  reduce 135


state 61
	sentencia_when : when condicion_when . ')' cuerpo_when ';' error  (133)

	')'  shift 127
	.  error


state 62
	encabezado_For : For id . op_asignacion cte ';' condicion_for ';' signo id ')' cola_For error  (140)
	encabezado_For : For id . op_asignacion cte ';' condicion_for ';' signo id cola_For error  (141)

	opasignacion  shift 36
	':'  shift 128
	'='  shift 40
	.  error

	op_asignacion  goto 129


state 63
	encabezado_For : For '(' . detalles_for ')' cola_For  (139)
	encabezado_For : For '(' . id op_asignacion cte ':' condicion_for ':' signo id ')' cola_For error  (142)

	id  shift 130
	.  error

	detalles_for  goto 131
	asignacion_for  goto 132


state 64
	sentencia_CONTINUE : CONTINUE error .  (188)

	.  reduce 188


state 65
	sentencia_CONTINUE : CONTINUE id . ';' error  (187)

	';'  shift 133
	.  error


state 66
	sentencia_CONTINUE : CONTINUE ';' .  (185)

	.  reduce 185


state 67
	sentencia_CONTINUE : CONTINUE ':' . id ';'  (186)

	id  shift 134
	.  error


state 68
	decl_const : id . op_asignacion cte  (12)
	decl_const : id . op_asignacion error  (13)
	decl_const : id . cte error  (14)
	decl_const : id . error  (15)

	error  shift 135
	cte  shift 136
	opasignacion  shift 36
	':'  shift 128
	'='  shift 40
	.  error

	op_asignacion  goto 137


state 69
	declaracion_const : Const ';' . error  (9)

	error  shift 138
	.  error


state 70
	declaracion_const : Const lista_de_asignacion_const . ';'  (7)
	declaracion_const : Const lista_de_asignacion_const . error  (8)
	lista_de_asignacion_const : lista_de_asignacion_const . ',' decl_const  (11)

	error  shift 139
	';'  shift 140
	','  shift 141
	.  error


state 71
	lista_de_asignacion_const : decl_const .  (10)

	.  reduce 10


state 72
	bloque_sentencias : '{' sentencia . '}'  (4)
	bloque_sentencias : '{' sentencia .  (5)
	sentencia : sentencia . declarativas  (20)
	sentencia : sentencia . ejecutables  (21)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 8
	i32  shift 9
	when  shift 10
	For  shift 11
	CONTINUE  shift 12
	f32  shift 13
	Const  shift 14
	'}'  shift 142
	'('  shift 16
	$end  reduce 5
	'{'  reduce 5

	declaracion_const  goto 19
	declarativas  goto 76
	ejecutables  goto 77
	tipo  goto 22
	lista_de_variables  goto 23
	declaracion_func  goto 24
	sentencia_when  goto 25
	asignacion  goto 26
	salida  goto 27
	sentencia_If  goto 28
	expresion_For  goto 29
	invocacion_funcion  goto 30
	sentencia_BREAK  goto 31
	sentencia_CONTINUE  goto 32
	encab_fun  goto 33
	encabezado_For  goto 34


state 73
	salida : '(' cadena . error  (83)

	error  shift 143
	.  error


state 74
	bloque_sentencias : bloque_sentencias '{' . sentencia '}'  (3)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 8
	i32  shift 9
	when  shift 10
	For  shift 11
	CONTINUE  shift 12
	f32  shift 13
	Const  shift 14
	'('  shift 16
	.  error

	sentencia  goto 144
	declaracion_const  goto 19
	declarativas  goto 20
	ejecutables  goto 21
	tipo  goto 22
	lista_de_variables  goto 23
	declaracion_func  goto 24
	sentencia_when  goto 25
	asignacion  goto 26
	salida  goto 27
	sentencia_If  goto 28
	expresion_For  goto 29
	invocacion_funcion  goto 30
	sentencia_BREAK  goto 31
	sentencia_CONTINUE  goto 32
	encab_fun  goto 33
	encabezado_For  goto 34


state 75
	bloque_sentencias : sentencia '}' .  (6)

	.  reduce 6


state 76
	sentencia : sentencia declarativas .  (20)

	.  reduce 20


state 77
	sentencia : sentencia ejecutables .  (21)

	.  reduce 21


state 78
	declarativas : tipo lista_de_variables . ';'  (22)

	';'  shift 145
	.  error


state 79
	declarativas : lista_de_variables ';' . error  (23)

	error  shift 146
	.  error


state 80
	ejecutables : sentencia_BREAK error .  (34)

	.  reduce 34


state 81
	ejecutables : sentencia_CONTINUE error .  (35)

	.  reduce 35


state 82
	cola_func : '{' . cuerpo_fun '}'  (43)

	id  shift 147
	If  shift 148
	out  shift 6
	fun  shift 7
	Return  shift 149
	BREAK  shift 8
	i32  shift 9
	when  shift 10
	For  shift 150
	CONTINUE  shift 12
	f32  shift 13
	Const  shift 14
	'('  shift 16
	.  error

	declaracion_const  goto 19
	declarativas  goto 151
	tipo  goto 22
	lista_de_variables  goto 23
	declaracion_func  goto 24
	sentencia_when  goto 25
	asignacion  goto 152
	salida  goto 153
	invocacion_funcion  goto 154
	sentencia_BREAK  goto 155
	sentencia_CONTINUE  goto 156
	cuerpo_fun  goto 157
	encab_fun  goto 33
	ret_fun  goto 158
	bloque_sentencias_funcion  goto 159
	ejecutables_funcion  goto 160
	sentencia_if_funcion  goto 161
	sentencia_for_funcion  goto 162


state 83
	declaracion_func : encab_fun cola_func .  (50)

	.  reduce 50


state 84
	lista_de_variables : id ',' lista_de_variables .  (37)

	.  reduce 37


state 85
	encabezado_For : id ':' For . '(' detalles_for ')' cola_For  (143)

	'('  shift 163
	.  error


state 86
	op_asignacion : ':' '=' .  (72)

	.  reduce 72


state 87
	invocacion_funcion : id '(' ')' . ';'  (190)

	';'  shift 164
	.  error


state 88
	invocacion_funcion : id '(' list_parametros_Inv . ')' ';'  (189)

	')'  shift 165
	.  error


state 89
	list_parametros_Inv : factor . ',' factor  (191)
	list_parametros_Inv : factor .  (192)

	','  shift 166
	')'  reduce 192


state 90
	encabezado_For : id . ':' For '(' detalles_for ')' cola_For  (143)
	factor : id .  (199)

	':'  shift 167
	error  reduce 199
	';'  reduce 199
	'+'  reduce 199
	'-'  reduce 199
	'*'  reduce 199
	'/'  reduce 199


state 91
	for_else_cte : expresion_For . Else cte  (77)
	for_else_cte : expresion_For . error  (78)

	error  shift 168
	Else  shift 169
	.  error


state 92
	asignacion : id op_asignacion expresion . ';'  (74)
	asignacion : id op_asignacion expresion . error  (75)
	expresion : expresion . signo termino  (194)

	error  shift 170
	';'  shift 171
	'+'  shift 100
	'-'  shift 101
	.  error

	signo  goto 104


state 93
	asignacion : id op_asignacion for_else_cte . ';'  (76)

	';'  shift 172
	.  error


state 94
	condicion_if : '(' expresion_relacional . ')'  (88)
	condicion_if : '(' expresion_relacional .  (90)

	')'  shift 173
	then  reduce 90
	Else  reduce 90


state 95
	factor : '-' cte .  (201)

	.  reduce 201


state 96
	comparador : menorigual .  (204)

	.  reduce 204


state 97
	comparador : mayorigual .  (205)

	.  reduce 205


state 98
	comparador : distinto .  (207)

	.  reduce 207


state 99
	comparador : '=' .  (206)

	.  reduce 206


state 100
	signo : '+' .  (150)

	.  reduce 150


state 101
	signo : '-' .  (151)

	.  reduce 151


state 102
	comparador : '<' .  (202)

	.  reduce 202


state 103
	comparador : '>' .  (203)

	.  reduce 203


state 104
	expresion : expresion signo . termino  (194)

	id  shift 43
	cte  shift 44
	'-'  shift 46
	.  error

	factor  goto 50
	termino  goto 174


state 105
	expresion_relacional : expresion comparador . expresion  (193)

	id  shift 43
	cte  shift 44
	'-'  shift 46
	.  error

	expresion  goto 175
	factor  goto 50
	termino  goto 51


state 106
	sentencia_If : If condicion_if then . cuerpo_If PR_end_if error  (86)
	sentencia_If : If condicion_if then . cuerpo_If error  (87)
	PR_then : then .  (129)

	then  shift 176
	Else  shift 107
	id  reduce 129
	If  reduce 129
	out  reduce 129
	BREAK  reduce 129
	For  reduce 129
	CONTINUE  reduce 129
	'{'  reduce 129
	'('  reduce 129

	cuerpo_If  goto 177
	cuerpo_Then  goto 109
	cuerpo_Else  goto 110
	PR_then  goto 111
	PR_else  goto 112


state 107
	PR_else : Else .  (130)

	.  reduce 130


state 108
	sentencia_If : If condicion_if cuerpo_If . PR_end_if ';'  (85)

	end_if  shift 178
	.  error

	PR_end_if  goto 179


state 109
	cuerpo_If : cuerpo_Then . cuerpo_Else  (92)
	cuerpo_If : cuerpo_Then .  (93)

	Else  shift 107
	error  reduce 93
	end_if  reduce 93

	cuerpo_Else  goto 180
	PR_else  goto 112


state 110
	cuerpo_If : cuerpo_Else .  (94)

	.  reduce 94


state 111
	cuerpo_Then : PR_then . '{' bloque_ejecutables '}'  (95)
	cuerpo_Then : PR_then . ejecutables  (96)

	id  shift 181
	If  shift 5
	out  shift 6
	BREAK  shift 8
	For  shift 11
	CONTINUE  shift 12
	'{'  shift 182
	'('  shift 16
	.  error

	ejecutables  goto 183
	asignacion  goto 26
	salida  goto 27
	sentencia_If  goto 28
	expresion_For  goto 29
	invocacion_funcion  goto 30
	sentencia_BREAK  goto 31
	sentencia_CONTINUE  goto 32
	encabezado_For  goto 34


state 112
	cuerpo_Else : PR_else . '{' bloque_ejecutables '}'  (97)
	cuerpo_Else : PR_else . ejecutables  (98)

	id  shift 181
	If  shift 5
	out  shift 6
	BREAK  shift 8
	For  shift 11
	CONTINUE  shift 12
	'{'  shift 184
	'('  shift 16
	.  error

	ejecutables  goto 185
	asignacion  goto 26
	salida  goto 27
	sentencia_If  goto 28
	expresion_For  goto 29
	invocacion_funcion  goto 30
	sentencia_BREAK  goto 31
	sentencia_CONTINUE  goto 32
	encabezado_For  goto 34


state 113
	condicion_if : expresion_relacional ')' .  (89)

	.  reduce 89


state 114
	termino : termino '*' . factor  (196)

	id  shift 43
	cte  shift 44
	'-'  shift 46
	.  error

	factor  goto 186


state 115
	termino : termino '/' . factor  (197)

	id  shift 43
	cte  shift 44
	'-'  shift 46
	.  error

	factor  goto 187


state 116
	salida : out cadena error . ';'  (82)
